fixed flex attributes

--- a/index.html
+++ b/index.html
@@ -27,20 +27,38 @@
         </div>
     </div>
     <div class="body">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
-        <form action="https://www.google.com/search">
-            <input type="text" name="q" class="search">
-            <div class="options">
-                <input type="submit" value="Google Search" class="search">
-                <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc" 0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4>
-            </div>
-        </form>
-        <div class="options">
-            <button></button>
+        <div class="content">
+            <form action="https://www.google.com/search">
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
+                <input type="text" name="q" class="input">
+                <div class="options">
+                    <input type="submit" value="Google Search" class="search">
+                    <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc" 0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4>
+                </div>
+            </form>
         </div>
     </div>
     <div class="footer">
-
+        <div class="country">
+            Philppines
+        </div>
+        <div class="bottom">
+            <div class="others">
+                <ul>
+                    <a href=""><li>About</li></a>
+                    <a href=""><li>Advertising</li></a>
+                    <a href=""><li>Business</li></a>
+                    <a href=""><li>How Search works</li></a>
+                </ul>
+            </div>
+            <div class="others">
+                <ul>
+                    <a href=""><li>Privacy</li></a>
+                    <a href=""><li>Terms</li></a>
+                    <a href=""><li>Settings</li></a>
+                </ul>
+            </div>
+        </div>
     </div>
     
 </body>
