added image search html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="header">
         <div class="links">
             <ul>
-                <li><a href="https://mail.google.com/mail/u/0/?ogbl#inbox">Gmail</a></li>
-                <li><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a></li>
+                <li><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Image Search</a></li>
+                <li><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Advanced Search</a></li>
                 <li><a href="https://labs.google.com/search?source=hp&authuser=0"> 
                     <img src="https://storage.googleapis.com/support-kms-prod/cGGjo9CcfMkEzQALYQ9oADD7XkRTe98JzRCD" class="icon">
                 </a></li>
@@ -27,15 +27,18 @@
         </div>
     </div>
     <div class="body">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
         <div class="content">
             <form action="https://www.google.com/search">
-                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
                 <input type="text" name="q" class="input">
                 <div class="options">
                     <input type="submit" value="Google Search" class="search">
-                    <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc" 0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4>
+                    <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4" class="lucky">
                 </div>
             </form>
+        </div>
+        <div class="lang">
+
         </div>
     </div>
     <div class="footer">
@@ -43,18 +46,18 @@
             Philppines
         </div>
         <div class="bottom">
-            <div class="others">
+            <div class="option1">
                 <ul>
-                    <a href=""><li>About</li></a>
-                    <a href=""><li>Advertising</li></a>
-                    <a href=""><li>Business</li></a>
-                    <a href=""><li>How Search works</li></a>
+                    <a href="https://about.google/?utm_source=google-PH&utm_medium=referral&utm_campaign=hp-footer&fg=1"><li>About</li></a>
+                    <a href="https://www.google.com/intl/en_ph/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"><li>Advertising</li></a>
+                    <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1"><li>Business</li></a>
+                    <a href="https://google.com/search/howsearchworks/?fg=1"><li>How Search works</li></a>
                 </ul>
             </div>
-            <div class="others">
+            <div class="option2">
                 <ul>
-                    <a href=""><li>Privacy</li></a>
-                    <a href=""><li>Terms</li></a>
+                    <a href="https://policies.google.com/privacy?hl=en-PH&fg=1"><li>Privacy</li></a>
+                    <a href="https://policies.google.com/terms?hl=en-PH&fg=1"><li>Terms</li></a>
                     <a href=""><li>Settings</li></a>
                 </ul>
             </div>
