added advanced search page

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Search</title>
+    <title>Advanced Search</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="header">
         <div class="links">
             <ul>
-                <li><a href="index.html">Google Search</a></li>
+                <li><a href="image_search.html">Image Search</a></li>
                 <li><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Advanced Search</a></li>
             </ul>
     
@@ -20,21 +19,12 @@
     <div class="body">
         <div class="title">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
-            <span class="subtitle">Images</span>
         </div>
         <div class="content">
-            <form action="https://google.com/search">
+            <form action="https://www.google.com/search">
                 <input type="text" name="q" class="input">
-                <input type="hidden" name="sca_esv" value="5042d53f30df2fc1">
-                <input type="hidden" name="udm" value="2">
-                <input type="hidden" name="biw" value="359">
-                <input type="hidden" name="bih" value="959">
-                <input type="hidden" name="sxsrf" value="ADLYWIL4hTf0UF09kVF0OHP8LKL5NpMIOw%3A1732193787523">
-                <input type="hidden" name="ei" value="-y0_Z9DOH4TQ2roPoa_FgA8">
-                <input type="hidden" name="gs_lp" value="EgNpbWciDnVuY2FubnkgdmFsbGV5KgIIAjINEAAYgAQYsQMYQxiKBTIGEAAYBxgeMgoQABiABBhDGIoFMgYQABgHGB4yBhAAGAcYHjIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIIEAAYgAQYsQNI-n5QAFgAcAF4AJABAJgBAKABAKoBALgBAcgBAJgCAaACCpgDAIgGAZIHATGgBwA">
-                <input type="hidden" name="sclient" value="img">
                 <div class="options">
-                    <input type="submit" value="Image Search" class="search">
+                    <input type="submit" value="Google Search" class="search">
                     <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4" class="lucky">
                 </div>
             </form>
