--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="header">
         <div class="links">
             <ul>
@@ -18,7 +17,9 @@
         </div>
     </div>
     <div class="body">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
+        <div class="title">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
+        </div>
         <div class="content">
             <form action="https://www.google.com/search">
                 <input type="text" name="q" class="input">
@@ -27,9 +28,6 @@
                     <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4" class="lucky">
                 </div>
             </form>
-        </div>
-        <div class="lang">
-
         </div>
     </div>
     <div class="footer">
