--- a/image_search.html
+++ b/image_search.html
@@ -12,12 +12,11 @@
         <div class="links">
             <ul>
                 <li><a href="index.html">Google Search</a></li>
-                <li><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Advanced Search</a></li>
             </ul>
     
         </div>
     </div>
-    <div class="body">
+    <div class="main">
         <div class="title">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
             <span class="subtitle">Images</span>
