--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div class="links">
             <ul>
                 <li><a href="image_search.html">Image Search</a></li>
-                <li><a href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Advanced Search</a></li>
+                <li><a href="advanced_search.html">Advanced Search</a></li>
             </ul>
     
         </div>
     </div>
-    <div class="body">
+    <div class="main">
         <div class="title">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
         </div>
