corrected flexboxes in advanced search

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -9,7 +9,7 @@
 <body class="advanced">
     <div class="header">
         <div class="title">
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
+            <span class="image"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo"></span>
         </div>
         <div class="links">
             <ul>
@@ -19,53 +19,48 @@
         </div>
     </div>
     <div class="main">
-        <span>Advanced Search</span>
+        <div class="form-title">
+            <span >Advanced Search</span>
+        </div>
         <div class="content">
             <form action="https://www.google.com/search">
                 <span>Find pages with...</span>
                 <div class="prompt">
-                    <span>all these words:</span>
+                    <label>all these words:</label>
                     <input type="text" name="as_q" class="input">
                 </div>
                 <div class="prompt">
-                    <span>this exact word or phrase:</span>
+                    <label>this exact word or phrase:</label>
                     <input type="text" name="as_epq" class="input">
                 </div>
                 <div class="prompt">
-                    <span>any of these words:</span>
+                    <label>any of these words:</label>
                     <input type="text" name="as_oq" class="input">
                 </div>
                 <div class="prompt">
-                    <span>none of these words:</span>
+                    <label>none of these words:</label>
                     <input type="text" name="as_eq" class="input">
                 </div>
-                <div class="options">
-                    <input type="submit" value="Advanced Search" class="search">
+                <div class="filler-main">
+                    <div class="filler-left"></div>
+                    <div class="filler">
+                        <input type="submit" value="Advanced Search" class="search">
+                </div>
                 </div>
                
-                
             </form>
-
         </div>
     </div>
     <div class="footer">
         <div class="country">
-            Philppines
+            <li>Philppines</li>
         </div>
         <div class="bottom">
             <div class="option1">
                 <ul>
-                    <a href="https://about.google/?utm_source=google-PH&utm_medium=referral&utm_campaign=hp-footer&fg=1"><li>About</li></a>
-                    <a href="https://www.google.com/intl/en_ph/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"><li>Advertising</li></a>
-                    <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1"><li>Business</li></a>
-                    <a href="https://google.com/search/howsearchworks/?fg=1"><li>How Search works</li></a>
-                </ul>
-            </div>
-            <div class="option2">
-                <ul>
+                    <a href="https://support.google.com/websearch/?p=ws_results_help&hl=en-PH&fg=1"><li>Help</li></a>
                     <a href="https://policies.google.com/privacy?hl=en-PH&fg=1"><li>Privacy</li></a>
                     <a href="https://policies.google.com/terms?hl=en-PH&fg=1"><li>Terms</li></a>
-                    <a href=""><li>Settings</li></a>
                 </ul>
             </div>
         </div>
