--- a/image_search.html
+++ b/image_search.html
@@ -6,9 +6,11 @@
     <title>Image Search</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="image">
 
     <div class="header">
+        <div class="filler-left">
+        </div>
         <div class="links">
             <ul>
                 <li><a href="index.html">Google Search</a></li>
