--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Google Search</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="index">
     <div class="header">
+        <div class="filler-left">
+        </div>
         <div class="links">
             <ul>
                 <li><a href="image_search.html">Image Search</a></li>
