added im feeling lucky

--- a/image_search.html
+++ b/image_search.html
@@ -26,17 +26,9 @@
         <div class="content">
             <form action="https://google.com/search">
                 <input type="text" name="q" class="input">
-                <input type="hidden" name="sca_esv" value="5042d53f30df2fc1">
-                <input type="hidden" name="udm" value="2">
-                <input type="hidden" name="biw" value="359">
-                <input type="hidden" name="bih" value="959">
-                <input type="hidden" name="sxsrf" value="ADLYWIL4hTf0UF09kVF0OHP8LKL5NpMIOw%3A1732193787523">
-                <input type="hidden" name="ei" value="-y0_Z9DOH4TQ2roPoa_FgA8">
-                <input type="hidden" name="gs_lp" value="EgNpbWciDnVuY2FubnkgdmFsbGV5KgIIAjINEAAYgAQYsQMYQxiKBTIGEAAYBxgeMgoQABiABBhDGIoFMgYQABgHGB4yBhAAGAcYHjIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIIEAAYgAQYsQNI-n5QAFgAcAF4AJABAJgBAKABAKoBALgBAcgBAJgCAaACCpgDAIgGAZIHATGgBwA">
-                <input type="hidden" name="sclient" value="img">
+                <input type="hidden" name="tbm" value="isch" class="input">
                 <div class="options">
                     <input type="submit" value="Image Search" class="search">
-                    <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4" class="lucky">
                 </div>
             </form>
         </div>
