--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type="text" name="q" class="input">
                 <div class="options">
                     <input type="submit" value="Google Search" class="search">
-                    <input type="submit" value="I'm Feeling Lucky" jsaction="trigger.kWlxhc0ahUKEwj2kKvP7-iJAxXc2DQHHT-BNjoQ19QECB4" class="lucky">
+                    <input type="submit" name="btnI" value="I'm Feeling Lucky" class="lucky">
                 </div>
             </form>
         </div>
