--- a/image_search.html
+++ b/image_search.html
@@ -20,8 +20,10 @@
     </div>
     <div class="main">
         <div class="title">
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
-            <span class="subtitle">Images</span>
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">    
+        </div>
+        <div class="subtitle">
+            <span class="">Images</span>
         </div>
         <div class="content">
             <form action="https://google.com/search">
@@ -35,7 +37,9 @@
     </div>
     <div class="footer">
         <div class="country">
-            Philppines
+            <ul>
+                <li>Philippines</li>
+            </ul>
         </div>
         <div class="bottom">
             <div class="option1">
