--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div class="title">
             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="logo">
         </div>
+        <div class="filler-logo">
+        </div>
         <div class="content">
             <form action="https://www.google.com/search">
                 <input type="text" name="q" class="input">
@@ -34,7 +36,7 @@
     </div>
     <div class="footer">
         <div class="country">
-            Philppines
+            <li>Philppines</li>
         </div>
         <div class="bottom">
             <div class="option1">
