corrected country spelling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     </div>
     <div class="footer">
         <div class="country">
-            <li>Philppines</li>
+            <ul>
+                <li>Philippines</li>
+            </ul>
         </div>
         <div class="bottom">
             <div class="option1">
