--- a/image_search.html
+++ b/image_search.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Search</title>
+    <title>Google Image Search</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="image">
-
     <div class="header">
         <div class="filler-left">
         </div>
@@ -15,7 +14,6 @@
             <ul>
                 <li><a href="index.html">Google Search</a></li>
             </ul>
-    
         </div>
     </div>
     <div class="main">
